# theword

./: Cargo.toml  README.md  agents.md  claude.md
src/: config.rs  lib.rs  types.rs
src/agent/: mod.rs  orchestrator.rs
src/cli/: graph_tui.rs  graph_viz.rs  mod.rs
src/dictation/: mod.rs
src/gui/: mod.rs
src/memory/: mod.rs
src/stt/: mod.rs
src/tools/: mod.rs
tests/: integration.rs
